fixed issue with scrollbar overflowing page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,8 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: 'Roboto';
+
+	/* outline: 1px solid red; */
 }
 
 html {
@@ -55,6 +57,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	
+	outline: 1px solid blue;
 }
 
 .simplebar-scrollbar:before {
@@ -68,36 +72,59 @@ body {
 
 /* Media Queries */
 
+@media only screen and (max-width: 1100px) {
+	.tasks{
+		width: 104rem !important;
+	}
+}
 @media only screen and (max-width: 1024px) {
 	.input-container, .task-container{
 		width: 90rem !important;
+	}
+	.tasks{
+		width: 95rem !important;
 	}
 }
 @media only screen and (max-width: 960px) {
 	.input-container, .task-container{
 		width: 75rem !important;
 	}
+	.tasks{
+		width: 80rem !important;
+	}
 }
 @media only screen and (max-width: 800px) {
 	.input-container, .task-container{
 		width: 60rem !important;
+	}
+	.tasks{
+		width: 65rem !important;
 	}
 }
 @media only screen and (max-width: 650px) {
 	.input-container, .task-container{
 		width: 50rem !important;
 	}
+	.tasks{
+		width: 55rem !important;
+	}
 }
 @media only screen and (max-width: 550px) {
 	.input-container, .task-container{
 		width: 40rem !important;
+	}
+	.tasks{
+		width: 45rem !important;
 	}
 }
 @media only screen and (max-width: 390px) {
 	.input-container, .task-container{
 		width: 36rem !important;
 	}
-
+	.tasks{
+		width: 41rem !important;
+	}
+	
 	.time{
 		right: 25% !important; 
 	}
